--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         property for all .</h2>
         <div class="actions">
           <!-- <a href="#about" class="btn-get-started">Offerings</a> -->
-          <a href="#services" class="btn-services">Get Early Access</a>
+          <!-- <a href="#services" class="btn-services">Get Early Access</a> -->
         </div>
       </div>
     </div>
@@ -149,6 +149,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Services Section ======= -->
+    <!--
     <section id="services">
       <div class="container">
         <div class="row" data-aos="fade-up">
@@ -193,8 +194,8 @@
         </div>
       </div>
     </section><!-- End Services Section -->
-
-    <!-- ======= Subscrbe Section ======= -->
+    -->
+    <!-- ======= Subscribe Section ======= -->
     <section id="subscribe">
       <div class="container" data-aos="fade-up">
         <div class="row">
