--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#services">Offering</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
 
           <!-- Drop down to enlist properties -->
@@ -138,7 +137,7 @@
               We are <b>hell-bent</b> on solving the most critical housing and real estate problems.
             </p>
             <p class="about-text">             
-              <b>For investors</b>, 1SQFT simplifies investment opportunities through fractionals in real estate. Buy a fraction of a property and collect your first rent payment later today.
+              <b>For investors</b>, 1SQFT simplifies investment opportunities through fractionals in real estate. Buy a fraction of a property and collect your first rent payment later today. Our process uses cutting edge advancements in blockchain technology for greater transparency and trust.
             </p>
             <p class="about-text">
               For future residential owners and residents, we create one-of-a-kind <b>community first</b> living experiences.
@@ -423,7 +422,7 @@
           <div class="col-md-12">
             <h3 class="section-title">Contact Us</h3>
             <div class="section-title-divider"></div>
-            <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+            <p class="section-description">We are best contacted via email or through this form for questions, comments, concerns.</p>
           </div>
         </div>
 
@@ -432,17 +431,17 @@
             <div class="info">
               <div>
                 <i class="bi bi-geo-alt"></i>
-                <p>A108 Adam Street<br>New York, NY 535022</p>
+                <p>Bengaluru, India 560042</p>
               </div>
 
               <div>
                 <i class="bi bi-envelope"></i>
-                <p>info@example.com</p>
+                <p>1sqftproptech@gmail.com</p>
               </div>
 
               <div>
                 <i class="bi bi-phone"></i>
-                <p>+1 5589 55488 55s</p>
+                <p>+91 991 071 1234</p>
               </div>
 
             </div>
